--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/router": "^4.2.4",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
         "@types/jquery": "^3.2.6",
+        "angular2-moment": "^1.7.0",
         "angular2-notifications": "^0.7.8",
         "angularfire2": "^5.0.0-rc.3",
         "classlist.js": "^1.1.20150312",
